# lpack

./: .gitignore  Cargo.toml  README.md  makefile  manifest.lpack
src/: main.rs  searcher.rs
src/builder/: builder.rs  callback.rs  manifest.rs  mod.rs
src/installer/: callback.rs  installer.rs  manifest.rs  mod.rs
src/remover/: callback.rs  mod.rs  remover.rs
